--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .venv/
+# Ignore Python bytecode
+__pycache__/
+*.py[cod]
+
+*/migrations/*
+
+*.sqlite3
+
+*.log
+.vscode/
+.idea/
+
+.DS_Store
+Thumbs.db
