--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,10 +1,7 @@
-{
-"npm install @mui/material @emotion/react @emotion/styled",
-"npm install @mui/icons-material",
-"npm install react react-dom",
-"npm install prop-types",
-"npm install @toolpad/core",
-"npm install react-router-dom"
-}
-
-
+asgiref==3.8.1
+Django==5.1.1
+django-cors-headers==4.4.0
+djangorestframework==3.15.2
+mysqlclient==2.2.4
+sqlparse==0.5.1
+typing_extensions==4.12.2
