connected the database to mysql

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,5 @@
-venv/
-.gitignore/
-# Ignore Python bytecode
+.env
+
 __pycache__/
 *.py[cod]
 
@@ -14,4 +13,3 @@ __pycache__/
 
 .DS_Store
 Thumbs.db
-
