added pytest files

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,11 @@
+# [pytest]
+# DJANGO_SETTINGS_MODULE = Navigator.settings
+# addopts = --ds=Navigator.settings
+# python_files = test_*.py, *_test.py, tests_*.py, *_tests.py
+
 [pytest]
 DJANGO_SETTINGS_MODULE = Navigator.settings
-
-python_files = test_*.py
+python_files = tests/test_*.py *_test.py
+python_classes = Test*
+python_functions = test_*
+addopts = --maxfail=1 --strict-markers
