--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,17 +1,73 @@
-venv/
-.gitignore/
-# Ignore Python bytecode
+# Python compiled files
+*.pyc
+*.pyo
+*.pyd
 __pycache__/
-*.py[cod]
+*.pyo
 
-*/migrations/*
-
+# Django specific
+*.log
+*.pot
+*.py[co]
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
 *.sqlite3
 
-*.log
-.vscode/
-.idea/
+# Django migrations
+**/migrations/*.py
+!**/migrations/__init__.py
 
+# Environment variables
+.env
+.env.local
+.env.*.backup
+.envrc
+
+# Virtual environment
+venv/
+.venv/
+env/
+ENV/
+*.egg-info/
+*.egg
+*.whl
+
+# Byte-compiled / optimized / DLL files
+*.py[cod]
+*$py.class
+
+# macOS system files
 .DS_Store
-Thumbs.db
 
+# VS Code settings
+.vscode/
+
+# Pytest cache
+.pytest_cache/
+htmlcov/
+.coverage
+.tox/
+.cache/
+.nox/
+
+# Testing and Coverage reports
+coverage.xml
+coverage_html_report/
+.cache
+pytest.ini
+test-results/
+junit-xml/
+
+# Node.js files (if applicable)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# MySQL / Database backups
+*.sql
+*.sqlite3
+*.mysql
+*.dump
