added payment gateway

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # .env
-DB_NAME=ch-dev-db
+DB_NAME=career_horizon
 DB_USER=root
-DB_PASSWORD=mysql23
+DB_PASSWORD=Dak@blru22
 DB_HOST=127.0.0.1
 DB_PORT=3306
