--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,12 @@
-# .env
-DB_NAME=ch-dev-db
-DB_USER=root
-DB_PASSWORD=mysql23
-DB_HOST=127.0.0.1
-DB_PORT=3306
+# # .env
+# DB_NAME=ch-dev-db
+# DB_USER=root
+# DB_PASSWORD=mysql23
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+
+DB_NAME=careerhorizon
+DB_USER=careerhorizon_user
+DB_PASSWORD=SEpIIuXSAOY2gK1EiliiNAmSLT9dYtqa
+DB_HOST=dpg-ct2oj0pu0jms738u00rg-a
+DB_PORT=5432
