--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ click==8.1.7
 constantly==23.10.4
 cryptography==43.0.3
 daphne==4.1.2
+dj-database-url==2.3.0
 dj-rest-auth==7.0.0
 Django==5.1.3
 django-channels==0.7.0
@@ -21,6 +22,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 dnspython==2.7.0
 exceptiongroup==1.2.2
+gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -34,6 +36,7 @@ mysqlclient==2.2.6
 oauthlib==3.2.2
 packaging==24.2
 pluggy==1.5.0
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
