--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 dnspython==2.7.0
 exceptiongroup==1.2.2
+gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -34,6 +35,7 @@ mysqlclient==2.2.6
 oauthlib==3.2.2
 packaging==24.2
 pluggy==1.5.0
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
