added fronted domails

--- a/backend/.env
+++ b/backend/.env
@@ -5,8 +5,8 @@
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 DATABASE_URL=postgresql://careerhorizon_user:SEpIIuXSAOY2gK1EiliiNAmSLT9dYtqa@dpg-ct2oj0pu0jms738u00rg-a/careerhorizon
-DB_NAME=careerhorizon
-DB_USER=careerhorizon_user
-DB_PASSWORD=SEpIIuXSAOY2gK1EiliiNAmSLT9dYtqa
-DB_HOST=dpg-ct2oj0pu0jms738u00rg-a
-DB_PORT=5432
+# DB_NAME=careerhorizon
+# DB_USER=careerhorizon_user
+# DB_PASSWORD=SEpIIuXSAOY2gK1EiliiNAmSLT9dYtqa
+# DB_HOST=dpg-ct2oj0pu0jms738u00rg-a
+# DB_PORT=5432
