--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,11 @@ jobs:
           python backend/manage.py migrate
 
       - name: Run Tests
+        working-directory: ./backend
+        # env:
+        #   DJANGO_SETTINGS_MODULE: backend.settings
+        # run: pytest
         env:
           DATABASE_URL: postgresql://careerhorizon_user:SEpIIuXSAOY2gK1EiliiNAmSLT9dYtqa@dpg-ct2oj0pu0jms738u00rg-a.oregon-postgres.render.com/careerhorizon
-          DJANGO_SETTINGS_MODULE: backend.settings
+          DJANGO_SETTINGS_MODULE: Navigator.settings
         run: pytest
