--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ msgpack==1.1.0
 mysqlclient==2.2.6
 oauthlib==3.2.2
 packaging==24.2
+pillow==11.0.0
 pluggy==1.5.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
