--- a/.github/workflows/build_tests.yml
+++ b/.github/workflows/build_tests.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Grant execute permissions
+      run: chmod +x ./build.sh
 
     - name: Set up Python
       uses: actions/setup-python@v2
