--- a/.github/workflows/build_tests.yml
+++ b/.github/workflows/build_tests.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Grant execute permissions
+      working-directory: ./backend 
       run: chmod +x ./build.sh
 
     - name: Set up Python
