--- a/.github/workflows/build_tests.yml
+++ b/.github/workflows/build_tests.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up environment variables
-      run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $ENV
+      run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
 
 
     - name: Grant execute permissions
