--- a/.github/workflows/build_tests.yml
+++ b/.github/workflows/build_tests.yml
@@ -1,4 +1,4 @@
-name: build tests
+name: Build and Test
 
 on:
   push:
@@ -13,35 +13,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Check out the code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.11'
 
-      # Set environment variable for the DATABASE_URL
-      - name: Set environment variable
-        run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+      - name: Create .env File
+        working-directory: ./backend
+        run: |
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
 
-      # # (Optional) Run tests or any other commands
-      # - name: Run tests
-      #   run: |
-      #     python manage.py test
-          
       - name: Grant execute permissions
-        working-directory: ./backend 
+        working-directory: ./backend
         run: chmod +x ./build.sh
-        env:
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
 
-      - name: Install dependencies
-        working-directory: ./backend 
+      - name: Install dependencies and run build
+        working-directory: ./backend
         run: ./build.sh
