--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,24 +5,39 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.10.12]
+
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+        ports:
+          - "5432:5432"
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.10.12
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Change to backend directory
+        python-version: 3.10.12
+    - name: Create .env File
       working-directory: ./backend
-      run: pwd
+      run: |
+        echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+        echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+        echo "DB_HOST=localhost" >> .env
+        echo "DB_PORT=5432" >> .env
     - name: Install Dependencies
       working-directory: ./backend
       run: |
@@ -30,5 +45,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       working-directory: ./backend
+      env:
+        DJANGO_SETTINGS_MODULE: 'Navigator.settings'
       run: |
         python manage.py test
