--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,6 +43,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Apply migrations
+      working-directory: ./backend
+      run: |
+        python manage.py makemigrations
+        python manage.py migrate
+
     - name: Run Tests
       working-directory: ./backend
       env:
