--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "i": "^0.3.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "socket.io-client": "^4.8.1",
