--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13
+        image: postgres:16
         env:
           POSTGRES_USER: ${{ secrets.DB_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -39,8 +39,8 @@ jobs:
           echo "DB_PORT=5432" >> .env
 
       - name: Install PostgreSQL client
-        run: sudo apt-get update && sudo apt-get install -y postgresql-client
-
+        run: sudo apt-get update && sudo apt-get install -y postgresql-client-16
+        
       - name: Backup PostgreSQL database
         env:
           DB_NAME: ${{ secrets.DB_NAME }}
